# src/main/resources/swagger/api.yml
@@ -7,6 +7,28 @@ info:
 servers:
   - url: http://localhost:8080/
 paths:
+  /login:
+    post:
+      summary: "User login"
+      tags:
+        - auth
+      operationId: login
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginRequest"
+      responses:
+        '200':
+          description: "Successful login"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LoginResponse"
+        '403':
+          description: "Invalid login credentials"
+
   /patients:
     get:
       summary: List all patients
@@ -16,10 +38,11 @@ paths:
       parameters:
         - name: limit
           in: query
-          description: How many items to return at one time (max 100)
+          description: How many items to return at one time (default 10, max 100)
           required: false
           schema:
             type: integer
+            default: 10
             format: int32
       responses:
         '200':
@@ -27,7 +50,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/PatientResponse"
+                type: array
+                items:
+                  $ref: "#/components/schemas/PatientResponse"
         default:
           description: Unexpected error
           content:
@@ -175,6 +200,21 @@ paths:
 
 components:
   schemas:
+    LoginRequest:
+      type: object
+      required:
+        - username
+        - password
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+    LoginResponse:
+      type: object
+      properties:
+        token:
+          type: string
     PatientRequest:
       type: object
       required:
@@ -195,10 +235,6 @@ components:
           example: Doe
         gender:
           type: string
-          enum:
-            - male
-            - female
-            - other
           description: Gender of the patient
           example: male
         age:
@@ -217,20 +253,33 @@ components:
           pattern: "^\\+?[0-9. ()-]{7,}$"
           description: Contact phone number of the patient
           example: "+1234567890"
-    Patient:
-      type: object
-      allOf:
-        - $ref: '#/components/schemas/PatientRequest'
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: Unique identifier of the patient
-          example: 123
     PatientResponse:
       type: object
-      allOf:
-        - $ref: '#/components/schemas/Patient'
+      properties:
+        firstName:
+          type: string
+          description: First name of the patient
+          example: John
+        lastName:
+          type: string
+          description: Last name of the patient
+          example: Doe
+        gender:
+          type: string
+          description: Gender of the patient
+          example: male
+        age:
+          type: integer
+          description: Age of the patient
+          example: 30
+        email:
+          type: string
+          description: Patient’s email address
+          example: john.doe@example.com
+        phoneNumber:
+          type: string
+          description: Contact phone number of the patient
+          example: "+1234567890"
     Error:
       type: object
       required:
